2011-07-15  Dan Bernstein  <mitz@apple.com>

        REGRESSION: Mouse cursor doesn’t hide when full screen video HUD hides
        https://bugs.webkit.org/show_bug.cgi?id=64615

        Reviewed by Anders Carlsson.

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::setCursorHiddenUntilMouseMoves): Added this stub.
        * src/ChromeClientImpl.h:

2011-07-14  Ryosuke Niwa  <rniwa@webkit.org>

        Rolled Chromium revision to 92606.

        * DEPS:

2011-07-14  Ilya Sherman  <isherman@chromium.org>

        Rename AutoFill -> Autofill and autoFill -> autofill
        https://bugs.webkit.org/show_bug.cgi?id=64333
        http://code.google.com/p/chromium/issues/detail?id=72758

        Reviewed by Darin Fisher.

        * WebKit.gyp:
        * public/WebAutofillClient.h:
        (WebKit::WebAutofillClient::didAcceptAutofillSuggestion):
        (WebKit::WebAutofillClient::didSelectAutofillSuggestion):
        (WebKit::WebAutofillClient::didClearAutofillSelection):
        (WebKit::WebAutofillClient::removeAutocompleteSuggestion):
        (WebKit::WebAutofillClient::textFieldDidBeginEditing):
        (WebKit::WebAutofillClient::textFieldDidEndEditing):
        (WebKit::WebAutofillClient::textFieldDidChange):
        (WebKit::WebAutofillClient::textFieldDidReceiveKeyDown):
        (WebKit::WebAutofillClient::~WebAutofillClient):
        * public/WebNode.h:
        * public/WebView.h:
        * src/AutofillPopupMenuClient.cpp:
        (WebKit::AutofillPopupMenuClient::AutofillPopupMenuClient):
        (WebKit::AutofillPopupMenuClient::~AutofillPopupMenuClient):
        (WebKit::AutofillPopupMenuClient::getSuggestionsCount):
        (WebKit::AutofillPopupMenuClient::getSuggestion):
        (WebKit::AutofillPopupMenuClient::getLabel):
        (WebKit::AutofillPopupMenuClient::getIcon):
        (WebKit::AutofillPopupMenuClient::removeSuggestionAtIndex):
        (WebKit::AutofillPopupMenuClient::canRemoveSuggestionAtIndex):