@@ -1,5 +1,13 @@
 2011-07-15  Dan Bernstein  <mitz@apple.com>
 
+        Chromium build fix.
+
+        * src/WebPopupMenuImpl.cpp:
+        (WebKit::WebPopupMenuImpl::setCursorHiddenUntilMouseMoves):
+        * src/WebPopupMenuImpl.h:
+
+2011-07-15  Dan Bernstein  <mitz@apple.com>
+
         REGRESSION: Mouse cursor doesn’t hide when full screen video HUD hides
         https://bugs.webkit.org/show_bug.cgi?id=64615
 
